--- a/.gitignore
+++ b/.gitignore
@@ -299,6 +299,9 @@ FakesAssemblies/
 .ntvs_analysis.dat
 node_modules/
 
+# Images of pokemons
+public/
+
 # Typescript v1 declaration files
 typings/
 
