--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Nest TypeScript starter repository",
   "license": "MIT",
   "scripts": {
+    "migrate": "rimraf dist && tsc -p tsconfig.build.json && node dist/migration-script/index.js",
     "build": "rimraf dist && tsc -p tsconfig.build.json",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "ts-node -r tsconfig-paths/register src/main.ts",
@@ -26,14 +27,18 @@
     "@nestjs/websockets": "^6.5.3",
     "reflect-metadata": "0.1.13",
     "rimraf": "3.0.0",
-    "rxjs": "6.5.2"
+    "rxjs": "6.5.2",
+    "mongoose": "^5.6.11"
   },
   "devDependencies": {
+    "dotenv": "^8.1.0",
     "@nestjs/testing": "6.5.3",
     "@types/express": "4.17.1",
     "@types/jest": "24.0.17",
     "@types/node": "12.7.2",
     "@types/supertest": "2.0.8",
+    "@types/dotenv": "^6.1.1",
+    "@types/mongoose": "^5.5.16",
     "jest": "24.9.0",
     "prettier": "1.18.2",
     "supertest": "4.0.2",
