--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,11 @@
 language: node_js
+node_js:
+  - 10.15
+cache:
+  yarn: true
+  directories:
+    - node_modules
+install:
+  - yarn install
+script:
+  - yarn test
