added mongo and evn variables

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,15 @@
 language: node_js
 node_js:
   - 10.15
+
+services:
+  - mongodb
+
+env:
+  - DB_URI=mongodb://localhost:27017/pokemondb
+  - API_URI=https://pokeapi.co/api/v2
+  - DB_TEST=mongodb://localhost:27017/pokemondb_test
+
 cache:
   yarn: true
   directories:
